feat: add PantryScreen with Firestore integration

--- a/app.json
+++ b/app.json
@@ -23,6 +23,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "9184dc08-fa35-4838-8c19-efdde965096b"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/9184dc08-fa35-4838-8c19-efdde965096b"
     }
   }
 }
