--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-paper": "^5.13.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "expo-updates": "~0.27.4"
+    "react-native-vector-icons": "^10.2.0",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
